; ModuleID = '/home/carl/AnghaBench/reactos/modules/rosapps/applications/sysutils/utils/pice/module/extr_pgflt.c_InstallIntEHook.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rosapps/applications/sysutils/utils/pice/module/extr_pgflt.c_InstallIntEHook.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@OldIntEHandler = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [14 x i8] c"OldIntE @ %x\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @InstallIntEHook() #0 {
  %1 = alloca i64, align 8
  %2 = call i32 (...) @ENTER_FUNC()
  %3 = call i32 (...) @MaskIrqs()
  %4 = load i64, i64* @OldIntEHandler, align 8
  %5 = icmp ne i64 %4, 0
  br i1 %5, label %10, label %6

6:                                                ; preds = %0
  %7 = call i64 asm sideeffect "mov $$NewIntEHandler,$0", "=r,~{eax},~{dirflag},~{fpsr},~{flags}"() #2, !srcloc !2
  store i64 %7, i64* %1, align 8
  %8 = load i64, i64* %1, align 8
  %9 = call i64 @SetGlobalInt(i32 14, i64 %8)
  store i64 %9, i64* @OldIntEHandler, align 8
  br label %10

10:                                               ; preds = %6, %0
  %11 = call i32 (...) @UnmaskIrqs()
  %12 = load i64, i64* @OldIntEHandler, align 8
  %13 = trunc i64 %12 to i32
  %14 = call i32 @DPRINT(i32 %13)
  %15 = call i32 (...) @LEAVE_FUNC()
  ret void
}

declare dso_local i32 @ENTER_FUNC(...) #1

declare dso_local i32 @MaskIrqs(...) #1

declare dso_local i64 @SetGlobalInt(i32, i64) #1

declare dso_local i32 @UnmaskIrqs(...) #1

declare dso_local i32 @DPRINT(i32) #1

declare dso_local i32 @LEAVE_FUNC(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
!2 = !{i32 476}
